# hollee-scraper

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  justfile  pyproject.toml  ruff.toml
backend/: Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: init-db.sql  start.sh
backend/src/og_scraper/: config.py  database.py  logging_config.py  worker.py
backend/src/og_scraper/api/: app.py  deps.py
backend/src/og_scraper/models/: __init__.py  base.py  data_correction.py  document.py  enums.py  extracted_data.py  operator.py  review_queue.py  scrape_job.py  state.py  well.py
backend/tests/: conftest.py  test_config.py  test_models.py
backend/tests/api/: conftest.py  test_cors.py  test_documents.py  test_export.py  test_health.py  test_map.py  test_operators.py  test_review.py  test_scrape.py  test_states.py  test_stats.py  test_wells.py
backend/tests/e2e/: conftest.py  test_api_integration.py  test_error_handling.py  test_performance.py  test_pipeline_integration.py  test_review_lifecycle.py
backend/tests/pipeline/: conftest.py  test_classifier.py  test_confidence.py  test_extractor.py  test_normalizer.py  test_pipeline.py  test_text_extractor.py  test_validator.py
backend/tests/scrapers/: conftest.py  record_co_cassettes.py  record_ok_cassettes.py  record_pa_cassettes.py  test_base_spider.py  test_co_spider.py  test_ok_spider.py  test_pa_spider.py  test_phase6_spiders.py  test_pipelines.py  test_state_registry.py
backend/tests/utils/: test_api_number.py
(+160 files in other folders)
