[project]
name = "og-scraper"
version = "0.1.0"
description = "Oil & Gas Document Scraper Backend"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "geoalchemy2>=0.15.0",
    # Task Queue
    "huey>=2.5.2",
    # Scraping
    "scrapy>=2.12.0",
    "scrapy-playwright>=0.0.43",
    "httpx>=0.28.0",
    # OCR & PDF
    "paddleocr>=3.0.0",
    "pymupdf4llm>=0.0.17",
    # Processing
    "tenacity>=9.0.0",
    "pybreaker>=1.2.0",
    # Logging
    "structlog>=24.4.0",
    # Utilities
    "python-multipart>=0.0.18",
    # State-specific parsers (Phase 4+6)
    "ebcdic-parser>=0.3.0",
    "pyproj>=3.7.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "testcontainers>=4.9.0",
    "vcrpy>=7.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/og_scraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
